--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "^10.2.0",
+    "@firebase/firestore": "^4.7.5",
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
     "rxjs": "~6.6.0",
